syntax = "proto3";

import "google/protobuf/empty.proto";
import "tbus/common/options.proto";

package tbus;

message LEDPowerState {
    bool on = 1;
}

service LED {
    option (class_id) = 0x0010;
    rpc SetPowerState(LEDPowerState) returns (google.protobuf.Empty) { option (index) = 1; }
}
